--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,6 +30,20 @@
       border: 2px solid black;
     }
 
+    .home-btn{
+      text-align: left;
+      margin: 30px;
+    }
+
+    .home-btn > a{
+      font-size: 1.2em;
+      padding: 0.5rem;
+      background-color: darkslategray;
+      color: white;
+      border: 2px solid black;
+      text-decoration: none;
+    }
+
     .form-label{
       font-size: 1.5em;
       margin-right: 1rem;
@@ -95,6 +109,10 @@
 </head>
 
 <body>
+
+  <div class="home-btn">
+    <a href="/">Home</a>
+  </div>
 
   <h1>URL Shortner</h1>
 
